
	* twittering-mode.el (twittering-timeline-spec-to-string): Replace
	`-' with `_' in symbol name `direct-messages' and
	`direct-messages-sent' to fit the parameters of twitter API.
	(twittering-extract-timeline-spec): Likewise.
	(twittering-timeline-spec-primary-p): Likewise.
	(twittering-timeline-spec-to-host-method): Likewise.
	(twittering-timeline-spec-alias): Likewise in a	comment.

2010-02-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-first-status-head): return
	nil if no statuses are rendered in the current buffer.
	(twittering-goto-first-status): go to the beginning of buffer if
	no statuses are rendered in the current buffer.
	(twittering-render-timeline): render tweets from the beginning of
	buffer if no statuses are rendered.

	* twittering-mode.el (twittering-reverse-mode): new variable for
	reverse alignment of tweets in timeline.
	(twittering-update-mode-line): add "reverse" to mode-line.
	(twittering-render-timeline): support reverse alignment of
	statuses.
	(twittering-toggle-reverse-mode): new interactive function to
	toggle reverse mode.
	(twittering-goto-next-status): support reverse mode.
	(twittering-goto-previous-status): likewise.
	(twittering-set-window-end): add new function.

2010-02-15  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Get a listname from `slug' element which is only in `list' node.

2010-02-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-and-render-timeline): copy
	spec-string and clear its text properties.

	* twittering-mode.el (twittering-http-default-sentinel): use
	buffer object directly.
	(twittering-http-get-default-sentinel): likewise.

	* twittering-mode.el (twittering-current-timeline): keep the
	current timeline spec string.

	* twittering-mode.el (twittering-switch-timeline): adjust the
	current timeline spec string to the given `spec-string' even if
	they mean the same timeline.
